[gd_scene load_steps=12 format=2]

[ext_resource path="res://levels/Casino/Vase.gd" type="Script" id=1]
[ext_resource path="res://scripts/_InteractionArea_Active.gd" type="Script" id=2]
[ext_resource path="res://assets/objects0000.png" type="Texture" id=3]
[ext_resource path="res://scripts/Sprite.gd" type="Script" id=4]
[ext_resource path="res://assets/sounds/Link - Bomb Deploy.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/Yoshi - Egg Throw.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/bump.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/sounds/OOT_Pot_Shatter.wav" type="AudioStream" id=8]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.5, 0.8, 0.5 )

[sub_resource type="SphereShape" id=2]

[sub_resource type="SpatialMaterial" id=3]
flags_transparent = true
flags_unshaded = true
params_depth_draw_mode = 3
params_billboard_mode = 1

[node name="ShinyVase" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.48445, 3.2514, 6.20847 )
collision_layer = 0
script = ExtResource( 1 )
num_coins = 5

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="InteractionArea" type="Area" parent="."]
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="InteractionArea"]
shape = SubResource( 2 )

[node name="Sprite3D" type="Sprite3D" parent="."]
material_override = SubResource( 3 )
pixel_size = 0.08
shaded = true
alpha_cut = 2
texture = ExtResource( 3 )
vframes = 4
hframes = 4
frame = 8
script = ExtResource( 4 )
should_randomize_frame_delay = true

[node name="Sounds" type="Node" parent="."]

[node name="PickupSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 5 )
volume_db = -15.0

[node name="ThrowSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 6 )
volume_db = -15.0

[node name="LandSound" type="AudioStreamPlayer" parent="Sounds"]
volume_db = -20.0

[node name="BumpSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 7 )
volume_db = -20.0

[node name="ShatterSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 8 )
volume_db = -20.0
